fixed horizontal scroll, fixed hamburger menu problem

--- a/src/contactPage/style.css
+++ b/src/contactPage/style.css
@@ -7,7 +7,8 @@ html {
     background-image: url('../../public/background.png');
     background-size: contain;
     height: 100vh;
-    width: 100vw;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 body {
@@ -22,7 +23,7 @@ body {
     right: 0;
     margin-right: 1vw;
     width: 42px;
-    height: 8vh;
+    height: 55px;
     background: none;
     outline: none;
     border: none;
@@ -34,7 +35,7 @@ body {
     content: '';
     display: block;
     width: 100%;
-    height: 1vh;
+    height: 7px;
     background-color: #fef7ff;
     margin: 1vh 0px;
     transition: 0.2s;
@@ -49,7 +50,7 @@ body {
 }
 
 .hamburger.is-active:before {
-    transform: rotate(-45deg) translate(-9px, 0px);
+    transform: rotate(-45deg) translate(-10px, 0px);
 }
 
 .nav {
