--- a/src/landingPage/style.css
+++ b/src/landingPage/style.css
@@ -12,6 +12,7 @@
 html {
     background-image: radial-gradient(#0b0d41, #000118);
     max-width: 100vw;
+    overflow-x: hidden;
     font-family: myFont;
 }
 
@@ -40,7 +41,7 @@ html {
     right: 0;
     margin-right: 1vw;
     width: 42px;
-    height: 8vh;
+    height: 55px;
     appearance: none;
     background: none;
     outline: none;
@@ -52,7 +53,7 @@ html {
     content: '';
     display: block;
     width: 100%;
-    height: 1vh;
+    height: 7px;
     background-color: #fef7ff;
     margin: 1vh 0px;
     transition: 0.2s;
