--- a/src/scorePage/style.css
+++ b/src/scorePage/style.css
@@ -32,7 +32,7 @@ html, body {
     right: 0;
     margin-right: 1vw;
     width: 42px;
-    height: 8vh;
+    height: 55px;
     appearance: none;
     background: none;
     outline: none;
@@ -45,7 +45,7 @@ html, body {
     content: '';
     display: block;
     width: 100%;
-    height: 1vh;
+    height: 7px;
     background-color: #fef7ff;
     margin: 1vh 0px;
     transition: 0.2s;
